Initial commit for UI

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,13 @@
 @import './fonts.css';
-@import './tailwind.css';
-@import './theme.css';
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Red Hat Text', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
